fixed form input problem, fixed text align problem, fixed search issue, now need to add README

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 * {
     box-sizing:border-box;
-    text-align: center;
 }
+
 
 a{
     color:orange;
@@ -10,7 +10,6 @@ a{
 h1 {
     font-family: 'Pacifico', cursive;
     font-size: 30px;
-    text-align: center;
 }
 
 h2 {
@@ -40,15 +39,13 @@ label {
     font-size: 20px;
 }
 
-input {
-    font-size: 18px;
-}
 
 body {
     font-family: 'Cormorant Garamond', serif;
     font-weight: lighter;
     display: flex;
     flex-direction: column;
+    margin:0;
     text-align: center;
 }
 
@@ -68,7 +65,6 @@ body {
 
 form {
     display: block;
-    text-align: center;
     margin-left: auto;
     margin-right:auto;
     margin-bottom:20px;
@@ -77,20 +73,37 @@ form {
 fieldset {
     display: flex;
     flex-direction: column;
-    width: 100px;
-    text-align: center;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    text-align: left;
 }
 
-input ::placeholder {
-    color: grey;
+input {
+    background-color:rgba(0, 0, 0, 0);
+    border-bottom-color: rgb(255,117,24);
+    width:550px;
+    font-size: 18px;
+    outline:none;
+    border-top: none;
+    border-left:none;
+    border-right:none;
+    padding:20px;
+    box-shadow: inset 0 0 0 2000px rgb(0,0,0, 0.4);
+    color: whitesmoke;
+}
+
+input::placeholder {
+    color:#A9A9A9;
+    font-family: 'Pacifico', cursive;
+}
+
+label {
+    padding: 10px;
 }
 
 .container1 {
     display:inline-block;
-    text-align: left;
     /* margin-top: 100px; */
     border: 1px solid rgb(255,117,24);
     box-shadow: inset 0 0 0 2000px rgb(0,0,0, 0.6);
@@ -154,14 +167,14 @@ input ::placeholder {
 .button {
     margin-top: 10px;
     padding: 10px;
-    border: none;
     font: inherit;
     color: inherit;
     background-color: transparent;
     cursor: pointer;
     color: rgb(255,117,24);
-    border: 1px solid white;
+    border: 3px solid white;
     border-radius: 15px;
+    font-family: 'Pacifico', cursive;
 }
 
 
@@ -200,7 +213,6 @@ input ::placeholder {
 .results li {
     list-style-type: none;
     border: 3px dotted black;
-    text-align: center;
     margin: 10px;
 }
 
@@ -218,7 +230,7 @@ input ::placeholder {
     }
 
     .background {
-        height: 100vh;
+        height: 110vh;
     }
 
     fieldset {
@@ -236,62 +248,26 @@ input ::placeholder {
     }
 
     .background {
-        height: 90vh;
+        height: 115vh;
     }
+
+    input {
+        font-size: 25px;
+    }
+
+    input::placeholder {
+        font-size:25px;
+    }
+
+    label {
+        font-size: 25px;
+        color: whitesmoke;
+        text-decoration: underline;
+    }
+
+    .accordion {
+        text-align: center;
+        font-size:25px;
+    }
+
 }
-
-/*  START OF LOADER */
-/* Center the loader */
-#loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
-
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-/* Add animation to "page content" */
-#loader { 
-    border: 12px solid #f3f3f3; 
-    border-radius: 50%; 
-    border-top: 12px solid #444444; 
-    width: 70px; 
-    height: 70px; 
-    animation: spin 1s linear infinite; 
-} 
-  
-@keyframes spin { 
-    100% { 
-        transform: rotate(360deg); 
-    } 
-} 
-  
-.center { 
-    position: absolute; 
-    top: 0; 
-    bottom: 0; 
-    left: 0; 
-    right: 0; 
-    margin: auto; 
-} 
-/* end of loader */
-
